@@ -12,7 +12,6 @@ Build-Depends: debhelper (>= 9),
                nasm [any-i386],
                libasound2-dev [linux-any],
                libaudiofile-dev,
-               libdirectfb-dev (>= 1.0) [!hurd-any],
                libgl1-mesa-dev,
                libglu1-mesa-dev,
                libpulse-dev,
@@ -48,25 +47,12 @@ Description: Simple DirectMedia Layer
  This version of SDL is compiled with X11, caca and DirectFB graphics
  drivers and OSS, ALSA, NAS and PulseAudio sound drivers.
 
-Package: libsdl2-2.0-0-udeb
-Package-Type: udeb
-Architecture: any
-Section: debian-installer
-Priority: extra
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: Simple DirectMedia Layer (with directfb graphics and no sound)
- SDL is a library that allows programs portable low level access to a video
- framebuffer, audio output, mouse, and keyboard.
- .
- This version of SDL is compiled with directfb graphics and no sound.
-
 Package: libsdl2-dev
 Architecture: any
 Section: libdevel
 Depends: ${misc:Depends},
          libasound2-dev [linux-any],
          libaudiofile-dev,
-         libdirectfb-dev (>= 1.0) [!hurd-any],
          libgl1-mesa-dev,
          libglu1-mesa-dev,
          libpulse-dev,
