@@ -9,12 +9,7 @@ confflags = --disable-rpath --enable-sdl-dlopen --disable-loadso \
             --disable-nas --disable-esd --disable-arts \
             --disable-alsa-shared --disable-pulseaudio-shared \
             --disable-x11-shared \
-            --enable-video-directfb
-udeb_confflags = --enable-video-directfb \
-                 --disable-video-x11 \
-                 --disable-video-opengl \
-                 --disable-audio \
-                 --disable-oss --disable-alsa --disable-pulseaudio
+            --disable-video-directfb
 
 # Only use NASM routines on x86 CPUs
 ifeq ($(DEB_HOST_ARCH_CPU),i386)
@@ -31,26 +26,18 @@ endif
 	dh $@ --parallel
 
 override_dh_auto_configure:
-	dh_auto_configure -Bbuilddir/all -- $(confflags)
-	dh_auto_configure -Bbuilddir/udeb -- $(confflags) $(udeb_confflags)
+	dh_auto_configure -- $(confflags)
 
 override_dh_auto_build:
-	dh_auto_build -Bbuilddir/all
-	dh_auto_build -Bbuilddir/udeb
+	dh_auto_build
 	tar czf debian/examples.tar.gz test
 
-override_dh_auto_install:
-	dh_auto_install -Bbuilddir/all
-	dh_auto_install -Bbuilddir/udeb --destdir=debian/tmp-udeb
-
 override_dh_auto_clean:
-	dh_auto_clean -Bbuilddir/all
-	dh_auto_clean -Bbuilddir/udeb
+	dh_auto_clean
 	rm -f debian/examples.tar.gz
 
 override_dh_install:
-	dh_install -plibsdl2-2.0-0-udeb --sourcedir=debian/tmp-udeb
-	dh_install --remaining-packages --fail-missing -XlibSDL2.la
+	dh_install --fail-missing -XlibSDL2.la
 
 override_dh_installexamples:
 	dh_installexamples -plibsdl2-dev debian/examples.tar.gz
@@ -65,4 +52,4 @@ override_dh_strip:
 	dh_strip --dbg-package=libsdl2-dbg
 
 override_dh_makeshlibs:
-	dh_makeshlibs -V"libsdl2-2.0-0 (>= $(SHLIBVER))" --add-udeb=libsdl2-2.0-0-udeb
+	dh_makeshlibs -V"libsdl2-2.0-0 (>= $(SHLIBVER))"
